# computational-graphics-project

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Design Decisions.docx  LICENSE  README.md  build.bat  build.sh
docs/: API.md  DESIGN.md  TUTORIAL.md
scripts/: build.bat  build.sh  clean.bat  clean.sh  run_tests.bat  run_tests.sh
shaders/: fragment.glsl  lighting.glsl  particle.frag  particle.vert  skybox.frag  skybox.vert  vertex.glsl
src/: DebugRenderer.cpp  DebugRenderer.h  Light.cpp  Light.h  MainCode.cpp  Object3D.cpp  Object3D.h  ParticleSystem.cpp  ParticleSystem.h  PerformanceMonitor.cpp  PerformanceMonitor.h  SceneManager.cpp  SceneManager.h  ShadowMapper.cpp  ShadowMapper.h  ViewManager.cpp  ViewManager.h
tests/: CMakeLists.txt  run_tests.bat  run_tests.sh  test_camera.cpp  test_performance.cpp  test_scene.cpp
